flickering issue solved and more smooth animations

--- a/src/components/ProjectSlideShow.css
+++ b/src/components/ProjectSlideShow.css
@@ -119,7 +119,7 @@
 .project-slideshow__bullets {
   display: flex;
   justify-content: center;
-  margin-top: 26px;
+  margin-top: 50px;
   gap: 1.2rem;
 }
 
